# car-insurance-simulator-back-end

./: .env.dist  .gitignore  .tool-versions  Dockerfile  Makefile  README.md  commitlint.config.js  docker-compose.yaml.dist  package-lock.json  pyproject.toml  setup.cfg  sonar-project.properties
app/: config.py
app/address/: entity.py
app/car/: entity.py
app/infrastructure/services/: logging.py
app/insurance/: entity.py
app/insurance/use_cases/: dynamic_rate_calculation.py  get_car_insurance.py  premium_calculation.py
app/interface/api/: __init__.py  default.py  error_handling.py  error_schema.py  main.py  middlewares.py  utils.py
app/interface/api/v1/: api.py
app/interface/api/v1/endpoints/: insurance.py
app/locale/: messages.py
app/locale/en_US/LC_MESSAGES/: base.pot
app/locale/pt_BR/LC_MESSAGES/: base.pot
app/policy/: entity.py
app/policy/use_cases/: policy_limit_calculation.py
app/shared/: models.py  translate.py
docs/diagramas/: diagrama_de_classes.plantuml
hooks/: pre-commit  pre-push
requirements/: base.txt  dev.txt  test.txt
tests/: conftest.py
tests/address/: test_entity.py
tests/car/: test_entity.py
tests/insurance/: conftest.py  test_entity.py
tests/insurance/use_cases/: test_dynamic_rate_calculation.py  test_get_car_insurance.py  test_premium_calculation.py
tests/interface/: conftest.py
tests/interface/api/: test_router_default.py
tests/interface/api/v1/endpoints/: conftest.py  test_insurance.py
tests/policy/: test_entity.py
tests/policy/use_cases/: test_policy_limit_calculation.py
